trunk/Archive2/86/013655330eb340/output
main.cpp: In function 'int main()':
main.cpp:21:17: error: 'static void Bar::Test(Foo)' is private
     static void Test(Foo foo){
                 ^
main.cpp:33:17: error: within this context
    Bar::Test(foo);
                 ^
